improve the function, add Projection

--- a/Shapefile Operation/Shapefile Operation.csproj
+++ b/Shapefile Operation/Shapefile Operation.csproj
@@ -34,32 +34,46 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DotSpatial.Controls">
-      <HintPath>E:\课程资料\C#\DotSpatial\DotSpatial_Full.1.7\DotSpatial.Controls.dll</HintPath>
+      <HintPath>..\..\..\..\Course\C#\Dotspatial\DotSpatial_Full.1.7\DotSpatial.Controls.dll</HintPath>
     </Reference>
     <Reference Include="DotSpatial.Data">
-      <HintPath>E:\课程资料\C#\DotSpatial\DotSpatial_Full.1.7\DotSpatial.Data.dll</HintPath>
+      <HintPath>..\..\..\..\Course\C#\Dotspatial\DotSpatial_Full.1.7\DotSpatial.Data.dll</HintPath>
     </Reference>
     <Reference Include="DotSpatial.Data.Forms">
-      <HintPath>E:\课程资料\C#\DotSpatial\DotSpatial_Full.1.7\DotSpatial.Data.Forms.dll</HintPath>
+      <HintPath>..\..\..\..\Course\C#\Dotspatial\DotSpatial_Full.1.7\DotSpatial.Data.Forms.dll</HintPath>
+    </Reference>
+    <Reference Include="DotSpatial.Plugins.MapWindowProjectFileCompatibility">
+      <HintPath>..\..\..\..\Course\C#\Dotspatial\DotSpatial_Full.1.7\Windows Extensions\DotSpatial.Plugins.MapWindowProjectFileCompatibility\DotSpatial.Plugins.MapWindowProjectFileCompatibility.dll</HintPath>
     </Reference>
     <Reference Include="DotSpatial.Projections">
-      <HintPath>E:\课程资料\C#\DotSpatial\DotSpatial_Full.1.7\DotSpatial.Projections.dll</HintPath>
+      <HintPath>..\..\..\..\Course\C#\Dotspatial\DotSpatial_Full.1.7\DotSpatial.Projections.dll</HintPath>
+    </Reference>
+    <Reference Include="DotSpatial.Projections.Forms, Version=1.7.0.0, Culture=neutral, PublicKeyToken=52099474f11b7ff0, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Course\C#\Dotspatial\DotSpatial_Full.1.7\DotSpatial.Projections.Forms.dll</HintPath>
+    </Reference>
+    <Reference Include="DotSpatial.Serialization, Version=1.7.0.0, Culture=neutral, PublicKeyToken=441f200f827611e7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Course\C#\Dotspatial\DotSpatial_Full.1.7\DotSpatial.Serialization.dll</HintPath>
     </Reference>
     <Reference Include="DotSpatial.Symbology">
-      <HintPath>E:\课程资料\C#\DotSpatial\DotSpatial_Full.1.7\DotSpatial.Symbology.dll</HintPath>
+      <HintPath>..\..\..\..\Course\C#\Dotspatial\DotSpatial_Full.1.7\DotSpatial.Symbology.dll</HintPath>
+    </Reference>
+    <Reference Include="DotSpatial.Tools">
+      <HintPath>..\..\..\..\Course\C#\Dotspatial\DotSpatial_Full.1.7\Tools\DotSpatial.Tools.dll</HintPath>
     </Reference>
     <Reference Include="DotSpatial.Topology">
-      <HintPath>E:\课程资料\C#\DotSpatial\DotSpatial_Full.1.7\DotSpatial.Topology.dll</HintPath>
+      <HintPath>..\..\..\..\Course\C#\Dotspatial\DotSpatial_Full.1.7\DotSpatial.Topology.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -97,6 +111,35 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="Microsoft.Office.Core">
+      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>8</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="Microsoft.Office.Interop.Excel">
+      <Guid>{00020813-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>9</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="VBIDE">
+      <Guid>{0002E157-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>5</VersionMajor>
+      <VersionMinor>3</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
